# my-portfolio

./: .gitignore  docker-compose.yaml
.github/workflows/: backend-deploy.yaml  frontend-deploy.yaml
backend/: Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 11a9f5a495e7_create_all_table.py
backend/app/: main.py  schemas.py
backend/app/core/: config.py
backend/app/core/security/: jwt.py
backend/app/database/: base.py  models.py  session.py
backend/app/router/: project.py  technology.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/: const.ts  type.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/[title]/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/common/: cursor.tsx  project.tsx
frontend/src/components/portfolio/: aboutMe.tsx  background.tsx  comment.tsx  contact.tsx  contactForm.tsx  footer.tsx  introModal.tsx  loadingComponent.tsx  navbar.tsx  portfolio.tsx  projectDetails.tsx  shadow.tsx  socialLink.tsx  welcome.tsx
frontend/src/data/: certificates.json  projects.json  techStacks.json
frontend/src/store/: modalsStore.ts
nginx/: default.conf
